Add video Remove docs remove arch and diagrams

--- a/index.html
+++ b/index.html
@@ -20,13 +20,18 @@
                     <h1>Bizzy - Multiplatform Fintech App
                     </h1>
                 </div>
-                <div>
+                <!-- <div>
                     <h6>Download: <a target="_blank" href="assets/thynk/BizzyReferenceDocumentation.pdf">Bizzy Reference
                             Documentation</a>
                     </h6>
-                </div>
+                </div> -->
             </div>
         </header>
+        <section class="video-container">
+            <iframe src="https://www.youtube.com/watch?v=DYZh_p__Oeo" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            </iframe>
+        </section>
         <section class="cards">
             <img class="article-img" src="./assets/design_light/01.png" alt=" " />
             <img class="article-img" src="./assets/design_light/02.png" alt=" " />
@@ -34,7 +39,7 @@
             <img class="article-img" src="./assets/design_light/04.png" alt=" " />
             <img class="article-img" src="./assets/design_light/05.png" alt=" " />
         </section>
-        <section class="video-container">
+        <!-- <section class="video-container">
             <img class="article-img" src="./assets/thynk/Architecture.png" alt=" " />
         </section>
         <section class="video-container">
@@ -43,7 +48,7 @@
             <img class="article-img" src="./assets/thynk/flutter_architecture-2x.webp
             " alt=" " />
 
-        </section>
+        </section> -->
         <section class="cards">
             <img class="article-img" src="./assets/design/accounts/1.png" alt=" " />
             <img class="article-img" src="./assets/design/accounts/2.png" alt=" " />
