--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </header>
         <section class="video-container">
-            <iframe src="https://www.youtube.com/watch?v=DYZh_p__Oeo" frameborder="0"
+            <iframe src="https://www.youtube.com/embed/DYZh_p__Oeo" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
             </iframe>
         </section>
